# cpp-testbed

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  auto_type.cpp  cpp14.cpp  cpp17-filesystem.cpp  cpp20.cpp  error_handling.cpp  main.cpp  rvalue.cpp  string_view.cpp
.github/workflows/: cmake-multi-platform.yml  cmake.yml
